--- a/3d-printing/README
+++ b/3d-printing/README
@@ -1,3 +1,10 @@
 # Notes
 Rocket Lab uses metal printing for their rocket motor parts (vstřikovač, čerpadla, hlavní palivové ventily, spalovací komora)
 - http://technet.idnes.cz/raketa-electron-spolecnosti-rocket-lab-d9q-/tec_vesmir.aspx?c=A170525_100550_tec-kratke-zpravy_vse
+
+New 3D Printed Airplane Seats Could Make Huge Savings
+http://diy3dprinting.blogspot.de/2017/05/new-3d-printed-airplane-seats-could.html
+
+Tryska, jaká je zevnitř?
+http://www.makerslab.cz/blog/2017/05/tryska-jaka-je-zevnitr/
+
