--- a/3d-printing/README
+++ b/3d-printing/README
@@ -1,10 +1,17 @@
-# Notes
+# Examples
 Rocket Lab uses metal printing for their rocket motor parts (vstřikovač, čerpadla, hlavní palivové ventily, spalovací komora)
 - http://technet.idnes.cz/raketa-electron-spolecnosti-rocket-lab-d9q-/tec_vesmir.aspx?c=A170525_100550_tec-kratke-zpravy_vse
 
 New 3D Printed Airplane Seats Could Make Huge Savings
-http://diy3dprinting.blogspot.de/2017/05/new-3d-printed-airplane-seats-could.html
+- http://diy3dprinting.blogspot.de/2017/05/new-3d-printed-airplane-seats-could.html
 
+A modular 3D printed camera that shoots 6x14cm negatives on 120 film
+- http://paulkohlhaussen.com/3d-printed-camera/
+- https://3dprintingindustry.com/news/introducing-3d-printed-cycloptic-mustard-monster-camera-capable-taking-panoramic-photos-114281/
+- https://digiarena.e15.cz/fotoaparat-vytisteny-na-3d-tiskarne-jako-alternativa-drahych-stredoformatu
+
+#Other
 Tryska, jaká je zevnitř?
 http://www.makerslab.cz/blog/2017/05/tryska-jaka-je-zevnitr/
+
 
