--- a/3d-printing/README
+++ b/3d-printing/README
@@ -14,4 +14,5 @@ A modular 3D printed camera that shoots 6x14cm negatives on 120 film
 Tryska, jaká je zevnitř?
 http://www.makerslab.cz/blog/2017/05/tryska-jaka-je-zevnitr/
 
-
+3D tištěné vaječníky daly vznik zdravým potomkům
+- http://www.osel.cz/9390-3d-tistene-vajecniky-daly-vznik-zdravym-potomkum.html
