--- a/3d-printing/README
+++ b/3d-printing/README
@@ -16,3 +16,6 @@ http://www.makerslab.cz/blog/2017/05/tryska-jaka-je-zevnitr/
 
 3D tištěné vaječníky daly vznik zdravým potomkům
 - http://www.osel.cz/9390-3d-tistene-vajecniky-daly-vznik-zdravym-potomkum.html
+
+3-D printing in manufacturing (infographic)
+- http://usblogs.pwc.com/emerging-technology/3d-printing-transform-manufacturing-infographic
