--- a/3d-printing/README
+++ b/3d-printing/README
@@ -19,3 +19,6 @@ http://www.makerslab.cz/blog/2017/05/tryska-jaka-je-zevnitr/
 
 3-D printing in manufacturing (infographic)
 - http://usblogs.pwc.com/emerging-technology/3d-printing-transform-manufacturing-infographic
+
+Trendy v oblasti stolního 3D tisku • Co hýbe světem FDM/FFF a stereolitografických zařízení
+http://www.3d-tisk.cz/trendy-v-oblasti-stolniho-3d-tisku-pokracovani/
